Fixed additional spacing issues caused when live

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -32,7 +32,6 @@
       .fonts(2.4rem, white);
       font-family: 'Varela Round', sans-serif;
       letter-spacing: 0.15rem;
-      padding: 0.25% 0;
     }
     .buttons {
       .custom-layout(center,center);
