--- a/less/navigation.less
+++ b/less/navigation.less
@@ -14,11 +14,9 @@
         top: 0;
         a {
             padding: 0.5% 1%;
-            padding-top: 1%;
             width: 25%;
             h2 {
-                font-size: 2.5rem;
-                color:white;
+                .fonts(2.5rem, white);
             }
         }
         nav {
