--- a/less/team-page.less
+++ b/less/team-page.less
@@ -29,7 +29,6 @@
             .fonts(2.4rem, white);
             font-family: 'Varela Round', sans-serif;
             letter-spacing: 0.15rem;
-            padding: 0.25% 0;
         }
         img {
             width: 15%;
